@@ -3,6 +3,7 @@ Version Next
 
     - Add default constructors to Abstract{Simple,Query}Container hierarchy
     - Fixed bug in SpringXSLPersistentObjectSchemaUpdate.setParameters()
+    - Add DelayedAction support for java.util.concurrent.locks.Lock
     - Fixed bug in AbstractDAO.getAll()
 
 Version 1.0.571 Released November 27, 2012
